chap.6読み終わった。（共役勾配法はよくわからず。） 問4-4を解いた。

--- a/Chapter6.ipynb
+++ b/Chapter6.ipynb
@@ -1151,6 +1151,574 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A = np.array([ [1.0,2,3,4],[2,1,3,4],[3,2,1,4],[4,3,2,1] ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  2.,  3.,  4.],\n",
+       "       [ 2.,  1.,  3.,  4.],\n",
+       "       [ 3.,  2.,  1.,  4.],\n",
+       "       [ 4.,  3.,  2.,  1.]])"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  2.,  3.,  4.])"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "t = np.ones(4)\n",
+    "t = A[0]\n",
+    "A[1] = t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  2.,  3.,  4.])"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def swapRow(A,i,j):\n",
+    "    #行列Aの第i行と第j行を入れ替え。\n",
+    "    n = A.shape[0] #行列Aの行数（列数）\n",
+    "    \n",
+    "    '''\n",
+    "    #Aの入れ替え。うまくいかない。\n",
+    "    t = np.ones(n+1) #格納用\n",
+    "    t = A[i]\n",
+    "    A[i] = A[j]\n",
+    "    A[j] = t\n",
+    "    \n",
+    "    return A\n",
+    "    '''\n",
+    "    \n",
+    "    B = A.copy()\n",
+    "    B[i] = A[j]\n",
+    "    B[j] = A[i]\n",
+    "    \n",
+    "    return B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.,  3.,  2.,  1.],\n",
+       "       [ 2.,  1.,  3.,  4.],\n",
+       "       [ 3.,  2.,  1.,  4.],\n",
+       "       [ 1.,  2.,  3.,  4.]])"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "swapRow(A,0,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  2.,  3.,  4.],\n",
+       "       [ 2.,  1.,  3.,  4.],\n",
+       "       [ 3.,  2.,  1.,  4.],\n",
+       "       [ 4.,  3.,  2.,  1.]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A #??? 関数の中でいじくっても、元のAは変わらないの？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def pivotLU(A):\n",
+    "    #行列Aをピボット付きLU分解\n",
+    "    n = A.shape[0]\n",
+    "    LU = A.copy()\n",
+    "    \n",
+    "    for k in range(n):\n",
+    "        max = 0\n",
+    "        maxRowNum = 0\n",
+    "        for m in range(k,n):\n",
+    "            if abs(LU[m][k]) > max:\n",
+    "                max = LU[m][k]\n",
+    "                maxRowNum = [m]\n",
+    "        \n",
+    "        i = k\n",
+    "        j = maxRowNum\n",
+    "        LU = swapRow(LU,i,j)\n",
+    "        \n",
+    "        w = 1/max\n",
+    "        \n",
+    "        for i in range(k+1, n):\n",
+    "            LU[i][k] = w * LU[i][k]\n",
+    "            for j in range(k+1, n):\n",
+    "                LU[i][j] = LU[i][j] - LU[i][k]*LU[k][j]\n",
+    "                \n",
+    "    return LU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.  ,  3.  ,  2.  ,  1.  ],\n",
+       "       [ 0.25,  1.25,  2.5 ,  3.75],\n",
+       "       [ 0.5 , -0.4 ,  3.  ,  5.  ],\n",
+       "       [ 0.75, -0.2 ,  0.  ,  4.  ]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivotLU(A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##6.4 連立１次方程式の反復解法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def stepJacobi(A,x,b):\n",
+    "    #Jacobi法の１反復を行う。Ax = b\n",
+    "    n = A.shape[0]\n",
+    "    xNew = x.copy()\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        s = 0.0\n",
+    "        for j in range(n):\n",
+    "            if i != j:\n",
+    "                s += A[i][j]*x[j]\n",
+    "        xNew[i] = (b[i] - s ) / A[i][i]\n",
+    "\n",
+    "    return xNew "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "A = np.array([[4.0,2,1],[2,4,1],[1,1,4]])\n",
+    "b = np.array([[7.0],[8],[9]])\n",
+    "x = np.array([[1.0],[1],[1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.  ],\n",
+       "       [ 1.25],\n",
+       "       [ 1.75]])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stepJacobi(A,x,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.linalg import norm, solve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def Jacobi(A,x,b):\n",
+    "    '''Jacobi法でAx=bを解く'''\n",
+    "    \n",
+    "    epsilon = 0.0000001 #停止条件\n",
+    "    count = 0\n",
+    "    iterationMax = 30\n",
+    "    \n",
+    "    while(norm(b - np.dot(A,x)) > epsilon):\n",
+    "        if count > iterationMax:\n",
+    "            break\n",
+    "            \n",
+    "        x = stepJacobi(A,x,b)\n",
+    "        count += 1\n",
+    "        \n",
+    "        if count%5 == 0:\n",
+    "            print \"count = \" + str(count)\n",
+    "            print x\n",
+    "    \n",
+    "    print \"The number of iteration is \" + str(count)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count = 5\n",
+      "[[ 0.74023438]\n",
+      " [ 1.22460938]\n",
+      " [ 1.79296875]]\n",
+      "count = 10\n",
+      "[[ 0.70065308]\n",
+      " [ 1.20016479]\n",
+      " [ 1.7696991 ]]\n",
+      "count = 15\n",
+      "[[ 0.70516795]\n",
+      " [ 1.20515269]\n",
+      " [ 1.77317739]]\n",
+      "count = 20\n",
+      "[[ 0.7044543 ]\n",
+      " [ 1.20445382]\n",
+      " [ 1.77266037]]\n",
+      "count = 25\n",
+      "[[ 0.70455905]\n",
+      " [ 1.20455903]\n",
+      " [ 1.77273722]]\n",
+      "count = 30\n",
+      "[[ 0.70454344]\n",
+      " [ 1.20454343]\n",
+      " [ 1.77272579]]\n",
+      "The number of iteration is 31\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.70454683],\n",
+       "       [ 1.20454683],\n",
+       "       [ 1.77272828]])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jacobi(A,x,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.70454545],\n",
+       "       [ 1.20454545],\n",
+       "       [ 1.77272727]])"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solve(A,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def stepGaussSeidel(A,x,b):\n",
+    "    #gauss-seidel法の一反復を行う\n",
+    "    n = A.shape[0]\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        s = 0.0\n",
+    "        for j in range(n):\n",
+    "            if j != i:\n",
+    "                s += A[i][j]*x[j]\n",
+    "\n",
+    "        x[i] = (b[i] - s)/A[i][i]\n",
+    "        \n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.    ],\n",
+       "       [ 1.25  ],\n",
+       "       [ 1.6875]])"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stepGaussSeidel(A,x,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def GaussSeidel(A,x,b):\n",
+    "    '''Gauss-Seidel法でAx=bを解く'''\n",
+    "    \n",
+    "    epsilon = 0.0000001 #停止条件\n",
+    "    count = 0\n",
+    "    iterationMax = 30\n",
+    "    \n",
+    "    while(norm(b - np.dot(A,x)) > epsilon):\n",
+    "        if count > iterationMax:\n",
+    "            break\n",
+    "            \n",
+    "        x = stepGaussSeidel(A,x,b)\n",
+    "        count += 1\n",
+    "        \n",
+    "        if count%5 == 0:\n",
+    "            print \"count = \" + str(count)\n",
+    "            print x\n",
+    "    \n",
+    "    print \"The number of iteration is \" + str(count)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count = 5\n",
+      "[[ 0.7043633 ]\n",
+      " [ 1.20460329]\n",
+      " [ 1.77275835]]\n",
+      "count = 10\n",
+      "[[ 0.70454542]\n",
+      " [ 1.20454546]\n",
+      " [ 1.77272728]]\n",
+      "The number of iteration is 11\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.70454545],\n",
+       "       [ 1.20454546],\n",
+       "       [ 1.77272727]])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GaussSeidel(A,x,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
