--- a/Chapter6.ipynb
+++ b/Chapter6.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +105,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "A1 = np.array([ [3,1,3], [2,3,4], [1,2,3] ], dtype=np.float) #float型の配列にしたい場合その１"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A2 = np.array([ [3.0,1,3], [2,3,4], [1,2,3] ]) #float型にしたいその２"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -113,18 +135,18 @@
     {
      "data": {
       "text/plain": [
-       "array([[3, 1, 3],\n",
-       "       [2, 3, 4],\n",
-       "       [1, 2, 3]])"
+       "array([[ 3.,  1.,  3.],\n",
+       "       [ 2.,  3.,  4.],\n",
+       "       [ 1.,  2.,  3.]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A"
+    "A1"
    ]
   },
   {
@@ -706,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -717,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -728,116 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "test = np.array([[1,2],[2,1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2],\n",
-       "       [2, 1]])"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "test[0][1] = 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 3],\n",
-       "       [2, 1]])"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "test[1][0] = 0.66*test[1][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 3],\n",
-       "       [1, 1]])"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "よくわかんないけど、整数型の配列になってる・・・？"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -848,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -859,7 +772,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -881,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -959,31 +872,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1],\n",
-       "       [5],\n",
-       "       [4]])"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "b"
+    "b = np.array([[1.0],[5],[4]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -994,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1007,7 +907,7 @@
        "       [ 0.]])"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,13 +918,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#前進消去\n",
+    "#前進代入\n",
     "for i in range(n):\n",
     "    s = 0\n",
     "    for j in range(i):\n",
@@ -1151,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -1162,9 +1062,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1173,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1187,7 +1087,7 @@
        "       [ 4.,  3.,  2.,  1.]])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -1265,10 +1165,10 @@
     "    #行列Aの第i行と第j行を入れ替え。\n",
     "    n = A.shape[0] #行列Aの行数（列数）\n",
     "    \n",
-    "    '''\n",
-    "    #Aの入れ替え。うまくいかない。\n",
+    "    \n",
+    "    #Aの入れ替え\n",
     "    t = np.ones(n+1) #格納用\n",
-    "    t = A[i]\n",
+    "    t = A[i].copy()\n",
     "    A[i] = A[j]\n",
     "    A[j] = t\n",
     "    \n",
@@ -1279,12 +1179,13 @@
     "    B[i] = A[j]\n",
     "    B[j] = A[i]\n",
     "    \n",
-    "    return B"
+    "    return B\n",
+    "    '''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1298,7 +1199,7 @@
        "       [ 1.,  2.,  3.,  4.]])"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
