--- a/Chapter5ex.ipynb
+++ b/Chapter5ex.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -53,30 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1],\n",
-       "       [-3]])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -96,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -107,30 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 2.,  8.],\n",
-       "       [ 0., -4.]])"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Jf(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -145,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -156,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -189,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +215,7 @@
    "cell_type": "code",
    "execution_count": 109,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -282,9 +236,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -309,6 +264,45 @@
    ],
    "source": [
     "Newton(np.array([[-0.7],[-0.6]])) #???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the number of iteration is 1\n",
+      "f(x) = [[0]\n",
+      " [0]]\n",
+      "x = [[-1.74]\n",
+      " [-0.42]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Newton(np.array([[-0.58],[-0.74]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##ギモン"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.Newton法の初期値ってどう選べばいいの？\n",
+    "\n",
+    "2.結果がよくわからない・・・"
    ]
   },
   {
