--- a/Chapter6.ipynb
+++ b/Chapter6.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc": "true"
+   },
    "source": [
-    "#第6章　線形方程式"
+    "# Table of Contents\n",
+    " <p><div class=\"lev1\"><a href=\"#線形方程式-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>線形方程式</a></div><div class=\"lev2\"><a href=\"#numpyをちょっと復習-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>numpyをちょっと復習</a></div><div class=\"lev2\"><a href=\"#LU分解による線形方程式解法-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>LU分解による線形方程式解法</a></div><div class=\"lev3\"><a href=\"#scipyのLU分解メソッド-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>scipyのLU分解メソッド</a></div><div class=\"lev3\"><a href=\"#LU分解のアルゴリズムを書いてみる-1.2.2\"><span class=\"toc-item-num\">1.2.2&nbsp;&nbsp;</span>LU分解のアルゴリズムを書いてみる</a></div><div class=\"lev4\"><a href=\"#ピボットなし-1.2.2.1\"><span class=\"toc-item-num\">1.2.2.1&nbsp;&nbsp;</span>ピボットなし</a></div><div class=\"lev4\"><a href=\"#ピボットあり-1.2.2.2\"><span class=\"toc-item-num\">1.2.2.2&nbsp;&nbsp;</span>ピボットあり</a></div><div class=\"lev2\"><a href=\"#連立１次方程式の反復解法-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>連立１次方程式の反復解法</a></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##6.0 numpyをちょっと復習"
+    "# 線形方程式"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## numpyをちょっと復習"
    ]
   },
   {
@@ -578,14 +588,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##6.2 LU分解による線形方程式解法"
+    "## LU分解による線形方程式解法"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###6.2.1 scipyのLU分解メソッド"
+    "### scipyのLU分解メソッド"
    ]
   },
   {
@@ -716,14 +726,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###6.2.2 LU分解のアルゴリズムを書いてみる"
+    "### LU分解のアルゴリズムを書いてみる"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####ピボットなし"
+    "#### ピボットなし"
    ]
   },
   {
@@ -1046,7 +1056,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####ピボットあり"
+    "#### ピボットあり"
    ]
   },
   {
@@ -1319,7 +1329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##6.4 連立１次方程式の反復解法"
+    "## 連立１次方程式の反復解法"
    ]
   },
   {
@@ -1630,21 +1640,27 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.5"
+  },
+  "toc": {
+   "toc_cell": true,
+   "toc_number_sections": true,
+   "toc_threshold": 6,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
